Zero out padding in nav ul li a to prevent wrapping

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -46,6 +46,7 @@
 	header nav ul li a {
 		color: white;
 		font-size: 0.95em;
+		padding: 0;
 		text-decoration: none;
 		display: inline-block;
 	}
